--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -750,7 +750,7 @@ main {
 
 .chips-item img {
   width: 100%;
-  filter: grayscale(1);
+  /* filter: grayscale(1); */
   transition: var(--transition-1);
 }
 
