--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -751,6 +751,8 @@ main {
 .chips-item img {
   width: 100%;
   /* filter: grayscale(1); */
+  height: 100%;
+  object-fit: cover;
   transition: var(--transition-1);
 }
 
