--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -745,13 +745,12 @@ main {
 
 .chips-item {
   min-width: 50%;
-  height: 200px;
+  height: 300px;
   scroll-snap-align: start;
 }
 
 .chips-item img {
-  width: 100%;
-  /* filter: grayscale(1); */
+  /* width: 100%; */
   height: 100%;
   object-fit: cover;
   transition: var(--transition-1);
