--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -755,7 +755,7 @@ main {
 .chips-item img {
   /* width: 100%; */
   width: auto;
-  height: 100%;
+  height: 300px;
   object-fit: cover;
   transition: var(--transition-1);
   filter: grayscale(0.2);
