--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -744,9 +744,8 @@ main {
 }
 
 .chips-item {
-  /* min-width: 50%; */
+  min-width: 50%;
   height: 200px;
-  overflow: hidden;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -757,7 +756,7 @@ main {
   /* width: 100%; */
   height: 100%;
   width: auto;
-  object-fit: cover;
+  object-fit: contain;
   display: block;
   filter: grayscale(0.2);
 }
