--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -744,12 +744,8 @@ main {
 }
 
 .chips-item {
-  min-width: 50%;
+  display: inline-block;
   height: 200px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  scroll-snap-align: start;
 }
 
 .chips-item img {
