--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -821,13 +821,17 @@ main {
 }
 
 .chips-item {
-  min-width: 50%;
+  /* min-width: 50%; */
+  flex: 0 0 auto;
   scroll-snap-align: start;
 }
 
 .chips-item img {
   /* width: 100%; */
-  height: 100%;
+  height: 200px;
+  /* height: 100%; */
+  width: auto;
+  object-fit: contain;
   /* filter: grayscale(1); */
   transition: var(--transition-1);
 }
