--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -823,17 +823,20 @@ main {
 .chips-item {
   /* min-width: 50%; */
   flex: 0 0 auto;
+  min-width: 0;
   scroll-snap-align: start;
 }
 
 .chips-item img {
   /* width: 100%; */
-  height: 200px;
+  max-height: 200px;
   /* height: 100%; */
+  height: auto;
   width: auto;
   object-fit: contain;
   /* filter: grayscale(1); */
   transition: var(--transition-1);
+  display: block;
 }
 
 .chips-item img:hover {
